[tool.poetry]
name = "nsp2visasim"
version = "0.2.0"
description = ""
authors = ["David Fokkema <davidfokkema@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
rich = "^10.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
