[tool.poetry]
name = "nsp2visasim"
version = "1.4.1.post2"
description = "A simulated device for measuring LED characteristics."
authors = ["David Fokkema <davidfokkema@icloud.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
PyVISA = "^1.11.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
rich = "^10.15.1"
pyserial = "^3.5"
PyVISA-py = "^0.5.2"
ipython = "^7.30.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
